<resources>
    <string name="app_name">Andersen Simple Contact List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Contacts List</string>
    <string name="surname">Surname:</string>
    <string name="name">Name:</string>
    <string name="patronymic">Patronymic:</string>
    <string name="phone">Phone:</string>
    <string name="company">Company:</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="choose_item">Choose item</string>
    <string name="action_search">search</string>
    <string name="delete_confirmation">Delete item?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>